...
                      );
                      NotificationService().scheduleTaskNotification(newTask);
                      Get.back();
                    }
                  },
                  child: const Text(
                    "Save",
                    style: TextStyle(color: Colors.white),
                  ),
                ),
              ],
            ),
          ],
...
